# bframe

./: .gitignore  LICENSE  Makefile  README.md  bframe.code-workspace  build.bat  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.py
bframe/: __init__.py  _except.py  _frame.py  config.py  ctx.py  frame.py  generics.py  http_server.py  local.py  logger.py  route.py  scaffold.py  serizlizer.py  server.py  sessions.py  testing.py  utils.py  view.py  wrappers.py  wsgi.py  wsgi_server.py
docs/: api.md  changes.md  index.md  installation.md  quickstart.md  todo.md  tutorial.md
docs/tutorial/: polls.md
simple_server/: ctx.py  frame.py  http_server.py  local.py  logger.py  route.py  server.py  utils.py  wsgi_server.py
src/bframe/: __init__.py  _except.py  frame.py  route.py  scaffold.py  server.py  utils.py  view.py  yellowprint.py
tests/: _frame_config.py  _frame_demo.py  base_route_test.py  ctx_test.py  frame_test.py  main.py  route_test.py
tutorial/bframer/: README.md  main.py
tutorial/bframer/static/: add.html  index.html
tutorial/bframer/static/css/: main.css
tutorial/polls/: app.py  bash.sh  config.py  models.py  utils.py
tutorial/polls/apis/: views.py
tutorial/polls/static/: index.html  main.css  main.js
tutorial/shortUrl/: README.md  main.py
